<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_amount"
        android:hint="@string/hint_amount"
        android:inputType="numberDecimal"
        android:autofillHints="amount"
        android:minHeight="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_category"
        android:hint="@string/hint_category"
        android:inputType="textCapWords"
        android:autofillHints="organization"
        android:minHeight="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_description"
        android:hint="@string/hint_description"
        android:inputType="textMultiLine"
        android:autofillHints="text"
        android:minHeight="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Spinner for Transaction Type -->
    <Spinner
        android:id="@+id/spinner_transaction_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"/>

    <!-- Spinner for Recurrence Type -->
    <Spinner
        android:id="@+id/spinner_recurrence_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/btn_save"
        android:text="@string/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

</LinearLayout>
